# Learn2Rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  MASTERPLAN.md  README.md  STATUS.md
.github/workflows/: pages.yml
assignments/: ch00-setup.md  ch01-basics.md  ch02-ownership.md
chapters/: 00-setup.md  01-basics.md  02-ownership.md
crates/focus_forge_cli/: Cargo.toml
crates/focus_forge_cli/src/: commands.rs  lib.rs  main.rs  output.rs
crates/focus_forge_cli/tests/: cli.rs
crates/focus_forge_core/: Cargo.toml
crates/focus_forge_core/src/: error.rs  lib.rs  note.rs  project.rs  storage.rs  task.rs  workspace.rs
crates/focus_forge_core/tests/: sample_data.rs
crates/focus_forge_status/: Cargo.toml
crates/focus_forge_status/src/: cargo_meta.rs  git.rs  lib.rs  main.rs  model.rs  status_md.rs  test_counts.rs
crates/focus_forge_status/tests/fixtures/: status_missing_front_matter.md  status_with_front_matter.md
docs/: compiler-errors.md  getting-unstuck.md
docs/decision-records/: 0001-use-cargo-workspace.md  0002-build-core-end-state-first.md
docs/superpowers/plans/: 2026-07-06-focus-forge-core.md  2026-07-08-focus-forge-status.md
docs/superpowers/specs/: 2026-07-06-focus-forge-core-design.md  2026-07-07-focus-forge-cli-design.md  2026-07-08-focus-forge-status-design.md
labs/ch00_setup/: Cargo.toml  README.md
labs/ch00_setup/src/: lib.rs  main.rs
labs/ch01_basics/: Cargo.toml  README.md
labs/ch01_basics/src/: lib.rs  main.rs
labs/ch01_basics/tests/: chapter_checks.rs
labs/ch02_ownership/: Cargo.toml  README.md
labs/ch02_ownership/src/: lib.rs  main.rs
labs/ch02_ownership/tests/: chapter_checks.rs
sample_data/: demo_workspace.json
site/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vercel.json
site/src/: app.css  app.html
site/static/: status.json
(+6 files in other folders)
