[workspace]
resolver = "2"
members = [
    "crates/focus_forge_core",
    "crates/focus_forge_cli",
    "crates/focus_forge_status",
    "labs/ch00_setup",
    "labs/ch01_basics",
    "labs/ch02_ownership",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/soulwax/Learn2Rust"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
predicates = "3"
